Исправлены замечания index.html: 1. привел центровщик футера к однотипному виду (class="container") 2. исправил 2 дива в картинке index-logo 3. Поубирал br 4. Поменял span на p c добавлением класса. 5. Карта убрана в футер 6. добавлена ссылка перед формой поиска отеля 7. Структурирована форма 8. добавлены span для стилизации + и -
hotel-search.html:
1. Исправлены button на a
2. Объединены span в типе отеля и цене

По остальным замечаниям у меня есть вопросы.

--- a/hotel-search.html
+++ b/hotel-search.html
@@ -76,80 +76,84 @@
 			</div>
 			<div class="search-result">
 				<div class="search-result-item">
-          <div class="search-result-item-left">
-            <img src="img/hotel-amara.png"  width="60" height="60" alt="hotel-amara">
-          </div>
-          <div class="search-result-item-mid">
-            <p>Amara-resort & SPA</p>
-            <span>Гостиница</span><span>от 3500 р.</span>
-            <button type="button" class="btn detail">Подробнее</button>
-            <button type="button" class="btn book">Забронировать</button>
-          </div>
-          <div class="search-result-item-right">
-            <div class="stars">
-              <span>x</span><span>x</span><span>x</span><span>x</span>
-            </div>
-            <div class="rating-field">
-              <span>Рейтинг:8,5</span>
-            </div>
-          </div>
-        </div>
-        <div class="search-result-item">
-          <div class="search-result-item-left">
-            <img src="img/hotel-desert.png"  width="60" height="60" alt="hotel-desert">
-          </div>
-          <div class="search-result-item-mid">
-            <p>Desert quail inn</p>
-            <span>Мотель</span><span>от 2000 р.</span>
-            <button type="button" class="btn detail">Подробнее</button>
-            <button type="button" class="btn book">Забронировать</button>
-          </div>
-          <div class="search-result-item-right">
-            <div class="stars">
-              <span>x</span><span>x</span>
-            </div>
-            <div class="rating-field">
-              <span>Рейтинг:8,9</span>
-            </div>
-          </div>
-        </div>
-        <div class="search-result-item">
-          <div class="search-result-item-left">
-            <img src="img/hotel-villas.png"  width="60" height="60" alt="hotel-villas">
-          </div>
-          <div class="search-result-item-mid">
-            <p>Villas at poco diablo</p>
-            <span>Апартаменты</span><span>от 4000 р.</span>
-            <button type="button" class="btn detail">Подробнее</button>
-            <button type="button" class="btn book">Забронировать</button>
-          </div>
-          <div class="search-result-item-right">
-            <div class="stars">
-              <span>x</span><span>x</span><span>x</span>
-            </div>
-            <div class="rating-field">
-              <span>Рейтинг:9,2</span>
-            </div>
-          </div>
-        </div>
+					<div class="search-result-item-left">
+						<img src="img/hotel-amara.png"  width="60" height="60" alt="hotel-amara">
+					</div>
+					<div class="search-result-item-mid">
+						<p>Amara-resort & SPA</p>
+						<div class="search-result-typeandprice">
+							<span>Гостиница</span><span>от 3500 р.</span>
+						</div>
+							<a href="#" class="btn detail">Подробнее</a>
+							<a href="#" class="btn book">Забронировать</a>
+					</div>
+					<div class="search-result-item-right">
+						<div class="stars">
+							<span>x</span><span>x</span><span>x</span><span>x</span>
+						</div>
+						<div class="rating-field">
+							<span>Рейтинг:8,5</span>
+						</div>
+					</div>
+				</div>
+				<div class="search-result-item">
+					<div class="search-result-item-left">
+						<img src="img/hotel-desert.png"  width="60" height="60" alt="hotel-desert">
+					</div>
+					<div class="search-result-item-mid">
+						<p>Desert quail inn</p>
+						<div class="search-result-typeandprice">
+							<span>Мотель</span><span>от 2000 р.</span>
+						</div>
+							<a href="#" class="btn detail">Подробнее</a>
+							<a href="#" class="btn book">Забронировать</a>
+					</div>
+					<div class="search-result-item-right">
+						<div class="stars">
+							<span>x</span><span>x</span>
+							</div>
+						<div class="rating-field">
+							<span>Рейтинг:8,9</span>
+						</div>
+					</div>
+				</div>
+				<div class="search-result-item">
+					<div class="search-result-item-left">
+						<img src="img/hotel-villas.png"  width="60" height="60" alt="hotel-villas">
+					</div>
+					<div class="search-result-item-mid">
+						<p>Villas at poco diablo</p>
+						<div class="search-result-typeandprice">
+							<span>Апартаменты</span><span>от 4000 р.</span>
+						</div>
+							<a href="#" class="btn detail">Подробнее</a>
+							<a href="#" class="btn book">Забронировать</a>
+					</div>
+					<div class="search-result-item-right">
+						<div class="stars">
+							<span>x</span><span>x</span><span>x</span>
+						</div>
+						<div class="rating-field">
+							<span>Рейтинг:9,2</span>
+						</div>
+					</div>
+				</div>
 			</div>
 		</main>
-		<footer class="main-footer">
-			<div class="container">
-				<div class="footer-Hashtag">
-					<a href="#">#Visitsedona</a>
-				</div>
-				<div class="footer-social">
-					<a class="social-btn social-btn-tw" href="#">twitter</a>
-					<a class="social-btn social-btn-fb" href="#">Facebook</a>
-					<a class="social-btn social-btn-ytb" href="#">Youtube</a>
-				</div>
-				<div class="footer-copyright">
-					<p>Website by</p>
-					<a class="btn" href="https://htmlacademy.ru">
-            <img src="img/html-academy.png" alt="HTML Academy">
-          </a>
-				</div>
+		<footer class="main-footer container">
+			<div class="footer-Hashtag">
+				<a href="#">#Visitsedona</a>
+			</div>
+			<div class="footer-social">
+				<a class="social-btn social-btn-tw" href="#">twitter</a>
+				<a class="social-btn social-btn-fb" href="#">Facebook</a>
+				<a class="social-btn social-btn-ytb" href="#">Youtube</a>
+			</div>
+			<div class="footer-copyright">
+				<p>Website by</p>
+				<a class="btn" href="https://htmlacademy.ru">
+					<img src="img/html-academy.png" alt="HTML Academy">
+				</a>
 			</div>
 		</footer>
 	</body>
