--- a/index.html
+++ b/index.html
@@ -18,110 +18,123 @@
 			</nav>			
 		</header>
 		<main class="container">
-			<div class="content-header">
-				<div class="index-logo">
-					<img src="img/main-logo.jpg" width="700" height="500" alt="Wellcome to the gorgeous sedona"> 
+			<div class="index-logo">
+				<img src="img/main-logo.jpg" width="700" height="500" alt="Wellcome to the gorgeous sedona"> 
+			</div>
+			<div class="intro">
+				<b>Седона - небольшой городок в аризоне, заслуживающий большего!</b>
+				<span>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</span>
+			</div>
+			<div class="advantages">
+				<div class="advantage-item">
+					<b>Настоящий городок</b>
+					<span>- №1 -</span>
+					<p class="advantage-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+				</div>
+			</div>
+			<div class="advantage-img">
+				<img src="img/sedona-view.jpg" width="250" height="150" alt="sedona-view">
+			</div>  
+			<div class="advantages">
+				<div class="features">
+					<img src="img/house.png" width="50" height="50" alt="house">
+					<b>Жилье</b>
+					<p class="features-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>  
+				</div>
+				<div class="features">
+					<img src="img/burger.png" width="50" height="50" alt="burger">
+					<b>Еда</b>
+					<p class="features-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+				</div>
+				<div class="features">
+					<img src="img/present.png" width="50" height="50" alt="present">
+					<b>Сувениры</b>
+					<p class="features-text">Не только китайского, но и местного производства!</p>
+				</div>
+			</div>
+			<div class="advantages">
+				<div class="advantage-img">
+					<img src="img/devil-bridge-view.jpg" width="250" height="150" alt="devil-bridge-view">
+				</div>
+				<div class="advantage-item">
+					<b>Там есть мост дьявола</b>
+					<span>- №2 -</span>
+					<p class="advantage-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+				</div>
+			</div>
+			<div class="advantages">
+				<div class="features">
+					<b>Небольшая площадь</b>
+					<span>- №3 -</span>
+					<p class="features-text">Все достопримечательности находятся очень близко</p>
+				</div>
+				<div class="features">
+					<b>Красивая дорога</b>
+					<span>- №4 -</span>
+					<p class="features-text">Ехать в седону из Лас-вегаса совсем не скучно!</p>
+				</div>
+				<div class="features">
+					<b>Мало туристов</b>
+					<span>- №5 -</span>
+					<p class="features-text">Большинство едет в гранд-каньон и толпится там</p>
 				</div>
 			</div>
 			<div class="intro">
-					<b>Седона - небольшой городок в аризоне, заслуживающий большего!</b><br>
-					<span>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</span>
-			</div>
-      <div class="advantages">
-        <div class="advantage-text">
-          <b>Настоящий городок</b><br>
-          <span>- №1 -</span><br>
-          <span>Седона - не аттракцион для туристов, там течет своя жизнь</span>
-        </div>
-        <div class="advantage-img">
-          <img src="img/sedona-view.jpg" width="250" height="150" alt="sedona-view">
-        </div>  
-      </div>
-			<div class="advantages">
-        <div class="features">
-          <img src="img/house.png" width="50" height="50" alt="house">
-          <b>Жилье</b><br>
-          <span>Рекомендуем пожить в настоящем мотеле, все как в кино!</span>  
-        </div>
-        <div class="features">
-          <img src="img/burger.png" width="50" height="50" alt="burger">
-          <b>Еда</b><br>
-          <span>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</span>
-        </div>
-        <div class="features">
-          <img src="img/present.png" width="50" height="50" alt="present">
-          <b>Сувениры</b><br>
-          <span>Не только китайского, но и местного производства!</span>
-        </div>
-      </div>
-			<div class="advantages">
-        <div class="advantage-img">
-					<img src="img/devil-bridge-view.jpg" width="250" height="150" alt="devil-bridge-view">
-        </div>
-        <div class="advantage-text">
-          <b>Там есть мост дьявола</b><br>
-          <span>- №2 -</span><br>
-          <span>Да, по нему можно пройти! Если конечно вы осмелитесь</span>
-        </div>
-      </div>
-			<div class="advantages">
-        <div class="features">
-          <b>Небольшая площадь</b><br>
-          <span>- №3 -</span><br>
-          <span>Все достопримечательности находятся очень близко</span>
-        </div>
-        <div class="features">
-          <b>Красивая дорога</b><br>
-          <span>- №4 -</span><br>
-          <span>Ехать в седону из Лас-вегаса совсем не скучно!</span>
-        </div>
-        <div class="features">
-          <b>Мало туристов</b><br>
-          <span>- №5 -</span><br>
-          <span>Большинство едет в гранд-каньон и толпится там</span>
-        </div>
-			</div>
-			<div class="intro">
-					<b>Заинтересовались?</b><br>
-					<span>Укажите предполагаемые даты поездки,</span><br>
-					<span>и мы покажем Вам лучшие предложения гостиниц в седоне</span>
-      </div>
-      <div class="map">
-					<img src="img/map.jpg" width="400" height="250" alt="map">
+					<b>Заинтересовались?</b>
+					<p class="into-text">Укажите предполагаемые даты поездки,<br>
+					и мы покажем Вам лучшие предложения гостиниц в седоне</p>
+					<a href="#" class="btn hotel-search">Поиск гостиницы в седоне</a>
 			</div>
 			<div class="hotel-search-form">
 				<form action="https://echo.htmlacademy.ru" method="post">
 					<b>Поиск гостиницы в седоне</b>
-					<label for="arrival-date">Дата заезда</label>
-					<input type="text" name="arrival-date-field" id="arrival-date" value="24 апреля 2016">
-					<img src="img/calendar" class="calendar" width="20" height="20" alt="calendar">
-					<label for="departure-date">Дата выезда</label>
-					<input type="text" name="departure-date-field" id="departure-date" value="4 июля 2016">
-					<img src="img/calendar" class="calendar" width="20" height="20" alt="calendar">
-					<label for="adults-amount">Взрослые</label>
-					<input type="number" name="adults-amount-field" id="adults-amount" min="1" max="1000">
-					<label for="children-amount">Дети</label>
-					<input type="number" name="children-amount-field" id="children-amount" min="0" max="1000">
-					<input type="Submit" name="Find" id="find-button" value="Найти">
+					<div class="form-item-row">
+						<label for="arrival-date">Дата заезда</label>
+						<input type="text" name="arrival-date-field" id="arrival-date" value="24 апреля 2016">
+						<div class="icon-calendar">
+							<img src="img/calendar" class="calendar" width="20" height="20" alt="calendar">
+						</div>
+					</div>
+					<div class="form-item-row">
+						<label for="departure-date">Дата выезда</label>
+						<input type="text" name="departure-date-field" id="departure-date" value="4 июля 2016">
+						<div class="icon-calendar">
+							<img src="img/calendar" class="calendar" width="20" height="20" alt="calendar">
+						</div>
+					</div>
+					<div class="form-item-row">
+						<label for="adults-amount">Взрослые</label>
+						<div class="form-item-rangeblock">
+							<span class="minus">-</span>
+							<input type="number" name="adults-amount-field" id="adults-amount" min="1" max="1000">
+							<span class="plus">+</span>
+						</div>
+						<label for="children-amount">Дети</label>
+						<div class="form-item-rangeblock">
+							<input type="number" name="children-amount-field" id="children-amount" min="0" max="1000">
+						</div>
+					</div>
+					<input type="Submit" name="Find" id="find-item-button" value="Найти">
 				</form>
 			</div>
 		</main>
-		<footer class="main-footer">
-			<div class="container">
-				<div class="footer-hashtag">
-					<a href="#">#Visitsedona</a>
-				</div>
-				<div class="footer-social">
-					<a class="social-btn social-btn-tw" href="#">twitter</a>
-					<a class="social-btn social-btn-fb" href="#">Facebook</a>
-					<a class="social-btn social-btn-ytb" href="#">Youtube</a>
-				</div>
-				<div class="footer-copyright">
-					<p>Website by</p>
-					<a class="btn" href="https://htmlacademy.ru">
-            <img src="img/html-academy.png" alt="HTML Academy">
-          </a>
-				</div>
+		<footer class="main-footer container">
+			<div class="map">
+				<img src="img/map.jpg" width="400" height="250" alt="map">
+			</div>
+			<div class="footer-hashtag">
+				<a href="#">#Visitsedona</a>
+			</div>
+			<div class="footer-social">
+				<a class="social-btn social-btn-tw" href="#">twitter</a>
+				<a class="social-btn social-btn-fb" href="#">Facebook</a>
+				<a class="social-btn social-btn-ytb" href="#">Youtube</a>
+			</div>
+			<div class="footer-copyright">
+				<p>Website by</p>
+				<a class="btn" href="https://htmlacademy.ru">
+					<img src="img/html-academy.png" alt="HTML Academy">
+				</a>
 			</div>
 		</footer>
 	</body>
