--- a/index.html
+++ b/index.html
@@ -6,136 +6,138 @@
 		<link href="css/style.css" type="text/css" rel="stylesheet">
 	</head>
 	<body>
-		<header class="main-header container">
-			<nav class="main-navigation">
-				<ul>
-					<li><a href="#">Информация</a></li>
-					<li><a href="#">Фото и видео</a></li>
-					<li><img src="img/small-logo.png" width="80" height="80" alt="City of Sedona"></li>
-					<li><a href="#">Карта Штата</a></li>
-					<li><a href="#">Гостиницы</a></li>
-				</ul>
-			</nav>			
-		</header>
-		<main class="container">
-			<div class="index-logo">
-				<img src="img/main-logo.jpg" width="700" height="500" alt="Wellcome to the gorgeous sedona"> 
-			</div>
-			<div class="intro">
-				<b>Седона - небольшой городок в аризоне, заслуживающий большего!</b>
-				<span>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</span>
-			</div>
-			<div class="advantages">
-				<div class="advantage-item">
-					<b>Настоящий городок</b>
-					<span>- №1 -</span>
-					<p class="advantage-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+		<div class="container">
+			<header>
+				<nav class="main-navigation">
+					<ul>
+						<li><a href="#">Информация</a></li>
+						<li><a href="#">Фото и видео</a></li>
+						<li><a href="#">Карта Штата</a></li>
+						<li><a href="#">Гостиницы</a></li>
+					</ul>
+				</nav>
+				<img src="img/small-logo.png" width="80" height="80" alt="City of Sedona">
+			</header>
+			<main>
+				<div class="index-logo">
+					<img src="img/main-logo.jpg" width="700" height="500" alt="Wellcome to the gorgeous sedona"> 
 				</div>
-			</div>
-			<div class="advantage-img">
-				<img src="img/sedona-view.jpg" width="250" height="150" alt="sedona-view">
-			</div>  
-			<div class="advantages">
-				<div class="features">
-					<img src="img/house.png" width="50" height="50" alt="house">
-					<b>Жилье</b>
-					<p class="features-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>  
+				<div class="intro">
+					<b>Седона - небольшой городок в аризоне, заслуживающий большего!</b>
+					<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 				</div>
-				<div class="features">
-					<img src="img/burger.png" width="50" height="50" alt="burger">
-					<b>Еда</b>
-					<p class="features-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+				<div class="advantages">
+					<div class="advantage-item">
+						<b>Настоящий городок</b>
+						<span class="advantage-number">- №1 -</span>
+						<p class="advantage-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+					</div>
 				</div>
-				<div class="features">
-					<img src="img/present.png" width="50" height="50" alt="present">
-					<b>Сувениры</b>
-					<p class="features-text">Не только китайского, но и местного производства!</p>
-				</div>
-			</div>
-			<div class="advantages">
 				<div class="advantage-img">
-					<img src="img/devil-bridge-view.jpg" width="250" height="150" alt="devil-bridge-view">
+					<img src="img/sedona-view.jpg" width="250" height="150" alt="sedona-view">
+				</div>  
+				<div class="advantages">
+					<div class="features">
+						<img src="img/house.png" width="50" height="50" alt="house">
+						<b>Жилье</b>
+						<p class="features-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>  
+					</div>
+					<div class="features">
+						<img src="img/burger.png" width="50" height="50" alt="burger">
+						<b>Еда</b>
+						<p class="features-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+					</div>
+					<div class="features">
+						<img src="img/present.png" width="50" height="50" alt="present">
+						<b>Сувениры</b>
+						<p class="features-text">Не только китайского, но и местного производства!</p>
+					</div>
 				</div>
-				<div class="advantage-item">
-					<b>Там есть мост дьявола</b>
-					<span>- №2 -</span>
-					<p class="advantage-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+				<div class="advantages">
+					<div class="advantage-img">
+						<img src="img/devil-bridge-view.jpg" width="250" height="150" alt="devil-bridge-view">
+					</div>
+					<div class="advantage-item">
+						<b>Там есть мост дьявола</b>
+						<span class="advantage-number">- №2 -</span>
+						<p class="advantage-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+					</div>
 				</div>
-			</div>
-			<div class="advantages">
-				<div class="features">
-					<b>Небольшая площадь</b>
-					<span>- №3 -</span>
-					<p class="features-text">Все достопримечательности находятся очень близко</p>
+				<div class="advantages">
+					<div class="features">
+						<b>Небольшая площадь</b>
+						<span class="advantage-number">- №3 -</span>
+						<p class="features-text">Все достопримечательности находятся очень близко</p>
+					</div>
+					<div class="features">
+						<b>Красивая дорога</b>
+						<span class="advantage-number">- №4 -</span>
+						<p class="features-text">Ехать в седону из Лас-вегаса совсем не скучно!</p>
+					</div>
+					<div class="features">
+						<b>Мало туристов</b>
+						<span class="advantage-number">- №5 -</span>
+						<p class="features-text">Большинство едет в гранд-каньон и толпится там</p>
+					</div>
 				</div>
-				<div class="features">
-					<b>Красивая дорога</b>
-					<span>- №4 -</span>
-					<p class="features-text">Ехать в седону из Лас-вегаса совсем не скучно!</p>
-				</div>
-				<div class="features">
-					<b>Мало туристов</b>
-					<span>- №5 -</span>
-					<p class="features-text">Большинство едет в гранд-каньон и толпится там</p>
-				</div>
-			</div>
-			<div class="intro">
+				<div class="intro">
 					<b>Заинтересовались?</b>
 					<p class="into-text">Укажите предполагаемые даты поездки,<br>
 					и мы покажем Вам лучшие предложения гостиниц в седоне</p>
 					<a href="#" class="btn hotel-search">Поиск гостиницы в седоне</a>
-			</div>
-			<div class="hotel-search-form">
-				<form action="https://echo.htmlacademy.ru" method="post">
-					<b>Поиск гостиницы в седоне</b>
-					<div class="form-item-row">
-						<label for="arrival-date">Дата заезда</label>
-						<input type="text" name="arrival-date-field" id="arrival-date" value="24 апреля 2016">
-						<div class="icon-calendar">
-							<img src="img/calendar" class="calendar" width="20" height="20" alt="calendar">
+				</div>
+				<div class="hotel-search-form">
+					<form action="https://echo.htmlacademy.ru" method="post">
+						<b>Поиск гостиницы в седоне</b>
+						<div class="form-item-row">
+							<label for="arrival-date">Дата заезда</label>
+							<input type="text" name="arrival-date-field" id="arrival-date" value="24 апреля 2016">
+							<div class="icon-calendar">
+								<img src="img/calendar" class="calendar" width="20" height="20" alt="calendar">
+							</div>
 						</div>
-					</div>
-					<div class="form-item-row">
-						<label for="departure-date">Дата выезда</label>
-						<input type="text" name="departure-date-field" id="departure-date" value="4 июля 2016">
-						<div class="icon-calendar">
-							<img src="img/calendar" class="calendar" width="20" height="20" alt="calendar">
+						<div class="form-item-row">
+							<label for="departure-date">Дата выезда</label>
+							<input type="text" name="departure-date-field" id="departure-date" value="4 июля 2016">
+							<div class="icon-calendar">
+								<img src="img/calendar" class="calendar" width="20" height="20" alt="calendar">
+							</div>
 						</div>
-					</div>
-					<div class="form-item-row">
-						<label for="adults-amount">Взрослые</label>
-						<div class="form-item-rangeblock">
-							<span class="minus">-</span>
-							<input type="number" name="adults-amount-field" id="adults-amount" min="1" max="1000">
-							<span class="plus">+</span>
+						<div class="form-item-row">
+							<label for="adults-amount">Взрослые</label>
+							<div class="form-item-rangeblock">
+								<span class="minus">-</span>
+								<input type="number" name="adults-amount-field" id="adults-amount" min="1" max="1000">
+								<span class="plus">+</span>
+							</div>
+							<label for="children-amount">Дети</label>
+							<div class="form-item-rangeblock">
+								<input type="number" name="children-amount-field" id="children-amount" min="0" max="1000">
+							</div>
 						</div>
-						<label for="children-amount">Дети</label>
-						<div class="form-item-rangeblock">
-							<input type="number" name="children-amount-field" id="children-amount" min="0" max="1000">
-						</div>
-					</div>
-					<input type="Submit" name="Find" id="find-item-button" value="Найти">
-				</form>
-			</div>
-		</main>
-		<footer class="main-footer container">
-			<div class="map">
-				<img src="img/map.jpg" width="400" height="250" alt="map">
-			</div>
-			<div class="footer-hashtag">
-				<a href="#">#Visitsedona</a>
-			</div>
-			<div class="footer-social">
-				<a class="social-btn social-btn-tw" href="#">twitter</a>
-				<a class="social-btn social-btn-fb" href="#">Facebook</a>
-				<a class="social-btn social-btn-ytb" href="#">Youtube</a>
-			</div>
-			<div class="footer-copyright">
-				<p>Website by</p>
-				<a class="btn" href="https://htmlacademy.ru">
-					<img src="img/html-academy.png" alt="HTML Academy">
-				</a>
-			</div>
-		</footer>
+						<input type="Submit" name="Find" id="find-item-button" value="Найти">
+					</form>
+				</div>
+			</main>
+			<footer>
+				<div class="map">
+					<img src="img/map.jpg" width="400" height="250" alt="map">
+				</div>
+				<div class="footer-hashtag">
+					<a href="#">#Visitsedona</a>
+				</div>
+				<div class="footer-social">
+					<a class="social-btn social-btn-tw" href="#">twitter</a>
+					<a class="social-btn social-btn-fb" href="#">Facebook</a>
+					<a class="social-btn social-btn-ytb" href="#">Youtube</a>
+				</div>
+				<div class="footer-copyright">
+					<p>Website by</p>
+					<a class="btn" href="https://htmlacademy.ru">
+						<img src="img/html-academy.png" alt="HTML Academy">
+					</a>
+				</div>
+			</footer>
+		</div>
 	</body>
 </html>
