добавил классы к абзацам в форме результатов поиска отеля

--- a/hotel-search.html
+++ b/hotel-search.html
@@ -81,7 +81,7 @@
 							<img src="img/hotel-amara.png"  width="60" height="60" alt="hotel-amara">
 						</div>
 						<div class="search-result-item-mid">
-							<p>Amara-resort & SPA</p>
+							<p class="search-result-hotel-name">Amara-resort & SPA</p>
 							<div class="search-result-typeandprice">
 								<span>Гостиница</span><span>от 3500 р.</span>
 							</div>
@@ -102,7 +102,7 @@
 							<img src="img/hotel-desert.png"  width="60" height="60" alt="hotel-desert">
 						</div>
 						<div class="search-result-item-mid">
-							<p>Desert quail inn</p>
+							<p class="search-result-hotel-name">Desert quail inn</p>
 							<div class="search-result-typeandprice">
 								<span>Мотель</span><span>от 2000 р.</span>
 							</div>
@@ -123,7 +123,7 @@
 							<img src="img/hotel-villas.png"  width="60" height="60" alt="hotel-villas">
 						</div>
 						<div class="search-result-item-mid">
-							<p>Villas at poco diablo</p>
+							<p class="search-result-hotel-name">Villas at poco diablo</p>
 							<div class="search-result-typeandprice">
 								<span>Апартаменты</span><span>от 4000 р.</span>
 							</div>
