разметил меню и начал конетент. Маска не налезла :(((

--- a/hotel-search.html
+++ b/hotel-search.html
@@ -9,13 +9,15 @@
 		<div class="container">
 			<header>
 				<nav class="main-navigation">
-					<ul>
+					<ul class="clearfix">
 						<li><a href="#">Информация</a></li>
 						<li><a href="#">Фото и видео</a></li>
 						<li><a href="#">Карта Штата</a></li>
 						<li><a href="#">Гостиницы</a></li>
 					</ul>
-					<img src="img/small-logo.png" width="80" height="80" alt="City of Sedona">
+					<a href="index.html">
+						<img src="img/small-logo.png" width="138" height="70" alt="City of Sedona">
+					</a>
 				</nav>			
 			</header>
 			<main>
