--- a/index.html
+++ b/index.html
@@ -8,87 +8,87 @@
 	<body>
 		<div class="container">
 			<header>
-				<nav class="main-navigation clearfix">
-<!-- 					<ul>
+				<nav class="main-navigation">
+					<ul class="clearfix">
 						<li><a href="#">Информация</a></li>
 						<li><a href="#">Фото и видео</a></li>
 						<li><a href="#">Карта Штата</a></li>
 						<li><a href="#">Гостиницы</a></li>
-					</ul> -->
+					</ul>
 				</nav>
-				<!-- <img src="img/small-logo.png" width="80" height="80" alt="City of Sedona"> -->
+				<img src="img/small-logo.png" width="138" height="70" alt="City of Sedona">
 			</header>
 			<main>
 				<div class="index-logo">
-					<!-- <img src="img/main-logo.jpg" width="700" height="500" alt="Wellcome to the gorgeous sedona">  -->
+					<img src="img/main_logo_background.jpg" width="1200" height="773" alt="Wellcome to the gorgeous sedona"> 
+					<img src="img/main_logo_background_mask.jpg" width="1200" height="173" alt=""> 
 				</div>
 				<div class="intro">
-					<!-- <b>Седона - небольшой городок в аризоне, заслуживающий большего!</b>
-					<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p> -->
+					<b>Седона - небольшой городок в аризоне, заслуживающий большего!</b>
+					<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 				</div>
-				<div class="advantages">
+				<div class="advantages1">
 					<div class="advantage-item">
-						<!-- <b>Настоящий городок</b>
+						<b>Настоящий городок</b>
 						<span class="advantage-number">- №1 -</span>
-						<p class="advantage-text">Седона - не аттракцион для туристов, там течет своя жизнь</p> -->
+						<p class="advantage-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
 					</div>
 					<div class="advantage-img">
-						<!-- <img src="img/sedona-view.jpg" width="250" height="150" alt="sedona-view"> -->
+						<img src="img/sedona-view.jpg" width="250" height="150" alt="sedona-view">
 					</div>
 				</div>
 				<div class="advantages">
 					<div class="features">
-						<!-- <img src="img/house.png" width="50" height="50" alt="house">
+						<img src="img/house.png" width="50" height="50" alt="house">
 						<b>Жилье</b>
-						<p class="features-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>  --> 
+						<p class="features-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>  
 					</div>
 					<div class="features">
-						<!-- <img src="img/burger.png" width="50" height="50" alt="burger">
+						<img src="img/burger.png" width="50" height="50" alt="burger">
 						<b>Еда</b>
-						<p class="features-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p> -->
+						<p class="features-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
 					</div>
 					<div class="features">
-						<!-- <img src="img/present.png" width="50" height="50" alt="present">
+						<img src="img/present.png" width="50" height="50" alt="present">
 						<b>Сувениры</b>
-						<p class="features-text">Не только китайского, но и местного производства!</p> -->
+						<p class="features-text">Не только китайского, но и местного производства!</p>
 					</div>
 				</div>
-				<div class="advantages">
+				<div class="advantages2">
 					<div class="advantage-img">
-						<!-- <img src="img/devil-bridge-view.jpg" width="250" height="150" alt="devil-bridge-view"> -->
+						<img src="img/devil-bridge-view.jpg" width="250" height="150" alt="devil-bridge-view">
 					</div>
 					<div class="advantage-item">
-						<!-- <b>Там есть мост дьявола</b>
+						<b>Там есть мост дьявола</b>
 						<span class="advantage-number">- №2 -</span>
-						<p class="advantage-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p> -->
+						<p class="advantage-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 					</div>
 				</div>
 				<div class="advantages">
 					<div class="features">
-						<!-- <b>Небольшая площадь</b>
+						<b>Небольшая площадь</b>
 						<span class="advantage-number">- №3 -</span>
-						<p class="features-text">Все достопримечательности находятся очень близко</p> -->
+						<p class="features-text">Все достопримечательности находятся очень близко</p>
 					</div>
 					<div class="features">
-						<!-- <b>Красивая дорога</b>
+						<b>Красивая дорога</b>
 						<span class="advantage-number">- №4 -</span>
-						<p class="features-text">Ехать в седону из Лас-вегаса совсем не скучно!</p> -->
+						<p class="features-text">Ехать в седону из Лас-вегаса совсем не скучно!</p>
 					</div>
 					<div class="features">
-						<!-- <b>Мало туристов</b>
+						<b>Мало туристов</b>
 						<span class="advantage-number">- №5 -</span>
-						<p class="features-text">Большинство едет в гранд-каньон и толпится там</p> -->
+						<p class="features-text">Большинство едет в гранд-каньон и толпится там</p>
 					</div>
 				</div>
 				<div class="intro">
-					<!-- <b>Заинтересовались?</b>
+					<b>Заинтересовались?</b>
 					<p class="into-text">Укажите предполагаемые даты поездки,<br>
 					и мы покажем Вам лучшие предложения гостиниц в седоне</p>
-					<a href="#" class="btn hotel-search">Поиск гостиницы в седоне</a> -->
+					<a href="#" class="btn hotel-search">Поиск гостиницы в седоне</a>
 				</div>
 				<div class="hotel-search-form">
 					<form action="https://echo.htmlacademy.ru" method="post">
-						<!-- <b>Поиск гостиницы в седоне</b>
 						<div class="form-item-row">
 							<label for="arrival-date">Дата заезда</label>
 							<input type="text" name="arrival-date-field" id="arrival-date" value="24 апреля 2016">
@@ -115,27 +115,29 @@
 								<input type="number" name="children-amount-field" id="children-amount" min="0" max="1000">
 							</div>
 						</div>
-						<input type="Submit" name="Find" id="find-item-button" value="Найти"> -->
+						<input type="Submit" name="Find" id="find-item-button" value="Найти">
 					</form>
 				</div>
 			</main>
 			<footer>
 				<div class="map">
-					<!-- <img src="img/map.jpg" width="400" height="250" alt="map"> -->
+					<img src="img/map.jpg" width="400" height="250" alt="map">
 				</div>
-				<div class="footer-hashtag">
-					<!-- <a href="#">#Visitsedona</a> -->
-				</div>
-				<div class="footer-social">
-					<!-- <a class="social-btn social-btn-tw" href="#">twitter</a>
-					<a class="social-btn social-btn-fb" href="#">Facebook</a>
-					<a class="social-btn social-btn-ytb" href="#">Youtube</a> -->
-				</div>
-				<div class="footer-copyright">
-					<!-- <p>Website by</p>
-					<a class="btn" href="https://htmlacademy.ru">
-						<img src="img/html-academy.png" alt="HTML Academy">
-					</a> -->
+				<div class="footer-container">
+					<div class="footer-hashtag">
+						<a href="#">#Visitsedona</a>
+					</div>
+					<div class="footer-social">
+						<a class="social-btn social-btn-tw" href="#">twitter</a>
+						<a class="social-btn social-btn-fb" href="#">Facebook</a>
+						<a class="social-btn social-btn-ytb" href="#">Youtube</a>
+					</div>
+					<div class="footer-copyright">
+						<p>Website by</p>
+						<a class="btn" href="https://htmlacademy.ru">
+							<img src="img/html-academy.png" alt="HTML Academy">
+						</a>
+					</div>
 				</div>
 			</footer>
 		</div>
