Версия с "общей большой" маской на главном лого

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			</header>
 			<main>
 				<div class="index-logo">
-					<img src="img/main_logo_background.jpg" width="1200" height="773" alt="Wellcome to the gorgeous sedona"> 
-					<img src="img/main_logo_background_mask.jpg" width="1200" height="273" alt=""> 
+					<img src="img/main_logo_background.jpg" class="main-logo-background" width="1200" height="773" alt="Wellcome to the gorgeous sedona"> 
+					<img src="img/main_logo_background_mask.png" class="main-logo-background-mask" width="1200" height="273" alt=""> 
 				</div>
 				<div class="intro">
 					<b>Седона - небольшой городок в аризоне, заслуживающий большего!</b>
