Мои мучения с главной картинкой :(( Фон почему-то не привязывается

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 					<ul class="clearfix">
 						<li><a href="#">Информация</a></li>
 						<li><a href="#">Фото и видео</a></li>
-						<li><a href="#">Карта Штата</a></li>
 						<li><a href="#">Гостиницы</a></li>
+						<li><a href="#">Карта Штата</a></li>
 					</ul>
 				</nav>
 				<img src="img/small-logo.png" width="138" height="70" alt="City of Sedona">
 			</header>
 			<main>
 				<div class="index-logo">
-					<img src="img/main_logo_background.jpg" class="main-logo-background" width="1200" height="773" alt="Wellcome to the gorgeous sedona"> 
-					<img src="img/main_logo_background_mask.png" class="main-logo-background-mask" width="1200" height="273" alt=""> 
+					<img src="img/main_logo_text.png" class="main-logo-text" width="457" height="344" alt="Wellcome to the gorgeous sedona"> 
+					<img src="img/main_logo_background_mask.png" class="main-logo-background-mask" width="1200" height="57" alt=""> 
 				</div>
 				<div class="intro">
 					<b>Седона - небольшой городок в аризоне, заслуживающий большего!</b>
