--- a/hotel-search.html
+++ b/hotel-search.html
@@ -16,7 +16,7 @@
 						<li><a href="#">Карта Штата</a></li>
 					</ul>
 					<a href="index.html">
-						<img src="img/small-logo.png" width="138" height="70" alt="City of Sedona">
+						<img src="img/small-logo.png" class="small-logo" width="138" height="70" alt="City of Sedona">
 					</a>
 				</nav>			
 			</header>
