--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 			</header>
 			<main>
 				<div class="index-logo">
-					<img src="img/main_logo_text.png" class="main-logo-text" width="457" height="344" alt="Wellcome to the gorgeous sedona"> 
+					<img src="img/main_logo_text.png" class="main-logo-text" width="457" height="352" alt="Wellcome to the gorgeous sedona"> 
 					<img src="img/main_logo_background_mask.png" class="main-logo-background-mask" width="1200" height="57" alt=""> 
 				</div>
 				<div class="intro">
 					<b>Седона - небольшой городок в аризоне, заслуживающий большего!</b>
 					<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 				</div>
-				<div class="advantages1">
-					<div class="advantage-item">
-						<b>Настоящий городок</b>
+				<div class="advantages advantage1">
+					<div class="advantage-description">
+						<b class="advantage-name">Настоящий городок</b>
 						<span class="advantage-number">- №1 -</span>
 						<p class="advantage-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
 					</div>
@@ -37,53 +37,53 @@
 						<img src="img/sedona-view.jpg" width="250" height="150" alt="sedona-view">
 					</div>
 				</div>
-				<div class="advantages">
-					<div class="features">
-						<img src="img/house.png" width="50" height="50" alt="house">
-						<b>Жилье</b>
-						<p class="features-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>  
+				<div class="features">
+					<div class="feature feature1">
+						<img src="img/house.png" class="feature-image" width="50" height="50" alt="house">
+						<b class="feature-name">Жилье</b>
+						<p class="feature-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>  
 					</div>
-					<div class="features">
-						<img src="img/burger.png" width="50" height="50" alt="burger">
-						<b>Еда</b>
-						<p class="features-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+					<div class="feature feature2">
+						<img src="img/burger.png" class="feature-image" width="50" height="50" alt="burger">
+						<b class="feature-name">Еда</b>
+						<p class="feature-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
 					</div>
-					<div class="features">
-						<img src="img/present.png" width="50" height="50" alt="present">
-						<b>Сувениры</b>
-						<p class="features-text">Не только китайского, но и местного производства!</p>
+					<div class="feature feature3">
+						<img src="img/present.png" class="feature-image" width="50" height="50" alt="present">
+						<b class="feature-name">Сувениры</b>
+						<p class="feature-text">Не только китайского, но и местного производства!</p>
 					</div>
 				</div>
-				<div class="advantages2">
+				<div class="advantages advantage2">
 					<div class="advantage-img">
 						<img src="img/devil-bridge-view.jpg" width="250" height="150" alt="devil-bridge-view">
 					</div>
-					<div class="advantage-item">
-						<b>Там есть мост дьявола</b>
+					<div class="advantage-description">
+						<b class="advantage-name">Там есть мост дьявола</b>
 						<span class="advantage-number">- №2 -</span>
 						<p class="advantage-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 					</div>
 				</div>
 				<div class="advantages">
-					<div class="features">
-						<b>Небольшая площадь</b>
+					<div class="advantage-description">
+						<b class="advantage-name">Небольшая площадь</b>
 						<span class="advantage-number">- №3 -</span>
-						<p class="features-text">Все достопримечательности находятся очень близко</p>
+						<p class="advantage-text">Все достопримечательности находятся очень близко</p>
 					</div>
-					<div class="features">
-						<b>Красивая дорога</b>
+					<div class="advantage-description">
+						<b class="advantage-name">Красивая дорога</b>
 						<span class="advantage-number">- №4 -</span>
-						<p class="features-text">Ехать в седону из Лас-вегаса совсем не скучно!</p>
+						<p class="advantage-text">Ехать в седону из Лас-вегаса совсем не скучно!</p>
 					</div>
-					<div class="features">
-						<b>Мало туристов</b>
+					<div class="advantage-description">
+						<b class="advantage-name">Мало туристов</b>
 						<span class="advantage-number">- №5 -</span>
 						<p class="features-text">Большинство едет в гранд-каньон и толпится там</p>
 					</div>
 				</div>
-				<div class="intro">
-					<b>Заинтересовались?</b>
-					<p class="into-text">Укажите предполагаемые даты поездки,<br>
+				<div class="hotel-search-head">
+					<b class="hotel-search-head-name">Заинтересовались?</b>
+					<p class="hotel-search-head-text">Укажите предполагаемые даты поездки,<br>
 					и мы покажем Вам лучшие предложения гостиниц в седоне</p>
 					<a href="#" class="btn hotel-search">Поиск гостиницы в седоне</a>
 				</div>
