--- a/index.html
+++ b/index.html
@@ -27,36 +27,36 @@
 					<b>Седона - небольшой городок в аризоне, заслуживающий большего!</b>
 					<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 				</div>
-				<div class="advantages advantage1">
+				<div class="advantages advantage1 clearfix">
 					<div class="advantage-description">
 						<b class="advantage-name">Настоящий городок</b>
 						<span class="advantage-number">- №1 -</span>
 						<p class="advantage-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
 					</div>
 					<div class="advantage-img">
-						<img src="img/sedona-view.jpg" width="250" height="150" alt="sedona-view">
+						<img src="img/sedona-view.jpg" width="800" height="256" alt="sedona-view">
 					</div>
 				</div>
-				<div class="features">
+				<div class="features clearfix">
 					<div class="feature feature1">
-						<img src="img/house.png" class="feature-image" width="50" height="50" alt="house">
+						<img src="img/icon-house.png" class="feature-image" width="75" height="72" alt="house">
 						<b class="feature-name">Жилье</b>
 						<p class="feature-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>  
 					</div>
 					<div class="feature feature2">
-						<img src="img/burger.png" class="feature-image" width="50" height="50" alt="burger">
+						<img src="img/icon-burger.png" class="feature-image" width="74" height="70" alt="burger">
 						<b class="feature-name">Еда</b>
 						<p class="feature-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
 					</div>
 					<div class="feature feature3">
-						<img src="img/present.png" class="feature-image" width="50" height="50" alt="present">
+						<img src="img/icon-present.png" class="feature-image" width="64" height="76" alt="present">
 						<b class="feature-name">Сувениры</b>
 						<p class="feature-text">Не только китайского, но и местного производства!</p>
 					</div>
 				</div>
-				<div class="advantages advantage2">
+				<div class="advantages advantage2 clearfix">
 					<div class="advantage-img">
-						<img src="img/devil-bridge-view.jpg" width="250" height="150" alt="devil-bridge-view">
+						<img src="img/devil-bridge-view.jpg" width="800" height="256" alt="devil-bridge-view">
 					</div>
 					<div class="advantage-description">
 						<b class="advantage-name">Там есть мост дьявола</b>
@@ -64,7 +64,7 @@
 						<p class="advantage-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 					</div>
 				</div>
-				<div class="advantages">
+				<div class="advantages advantages-other clearfix">
 					<div class="advantage-description">
 						<b class="advantage-name">Небольшая площадь</b>
 						<span class="advantage-number">- №3 -</span>
@@ -112,7 +112,9 @@
 							</div>
 							<label for="children-amount">Дети</label>
 							<div class="form-item-rangeblock">
+								<span class="minus">-</span>
 								<input type="number" name="children-amount-field" id="children-amount" min="0" max="1000">
+								<span class="plus">+</span>
 							</div>
 						</div>
 						<input type="Submit" name="Find" id="find-item-button" value="Найти">
@@ -121,7 +123,7 @@
 			</main>
 			<footer>
 				<div class="map">
-					<img src="img/map.jpg" width="400" height="250" alt="map">
+					<img src="img/map.jpg" width="1200" height="593" alt="map">
 				</div>
 				<div class="footer-container">
 					<div class="footer-hashtag">
