--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<header>
+			<header class="index-header">
 				<nav class="main-navigation">
 					<ul class="clearfix">
 						<li><a href="#">Информация</a></li>
@@ -18,7 +18,7 @@
 				</nav>
 				<img src="img/small-logo.png" class="small-logo" width="138" height="70" alt="City of Sedona">
 			</header>
-			<main>
+			<main class="index-main">
 				<div class="index-logo">
 					<img src="img/main_logo_text.png" class="main-logo-text" width="457" height="352" alt="Wellcome to the gorgeous sedona"> 
 					<img src="img/main_logo_background_mask.png" class="main-logo-background-mask" width="1200" height="57" alt=""> 
@@ -121,7 +121,7 @@
 					</form>
 				</div>
 			</main>
-			<footer>
+			<footer class="index-footer">
 				<div class="map">
 					<img src="img/map.jpg" width="1200" height="593" alt="map">
 				</div>
